tests/negative/comptime/self-referential-const.orng
const x = comptime{x}

fn main() -> Int {0}